Error solucionado nginx con php7.2

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,6 +14,6 @@ server {
                 fastcgi_param SERVER_NAME $http_host;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 #fastcgi_pass 127.0.0.1:9000;
-				fastcgi_pass unix:/var/run/php5-fpm.sock;
+				fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
         }
 }
